[package]
name = "steamworks-sys"
version = "0.13.0"
authors = ["Thinkofname"]
build = "build.rs"
description = "Provides raw bindings to the steamworks sdk"
license = "MIT / Apache-2.0"
repository = "https://github.com/Noxime/steamworks-rs"
documentation = "https://docs.rs/steamworks-sys"
edition = "2021"
rust-version = "1.80.0"

[features]
default = []

[dependencies]
libloading = "0.8"

[build-dependencies]
bindgen = "0.72"
